# atsamd

./: README.md  crates.json
boards/maduino_zero_4g/: Cargo.toml  README.md
boards/maduino_zero_4g/examples/: blinky_basic.rs  usb_echo.rs  usb_logging.rs
boards/maduino_zero_4g/src/: lib.rs  pins.rs
